グリーティングAPIをOpenAPIに移行
