# Sources/TokyoDisneyResortAPI/Controllers/TokyoDisneyResortController.swift
@@ -18,7 +18,7 @@ struct TokyoDisneyResortController: RouteCollection {
         let myRoutes = routes.grouped("v1")
         // ParkType をパスパラメータとして受け取る
         //myRoutes.get(":parkType", "attraction", use: getAttractionStatus)
-        myRoutes.get(":parkType", "greeting", use: getGreetingStatus)
+        //myRoutes.get(":parkType", "greeting", use: getGreetingStatus)
         myRoutes.get(":parkType", "restaurant", use: getRestaurantStatus)
     }
     
